force-app/main/default/objects/Contract/fields/Addendum_1_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Addendum_1_Course_Name__c</fullName>
    <formula>Addendum_1_Opportunity__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addendum 1 Course Name</label>
    <type>Text</type>
</CustomField>