force-app/main/default/objects/Contract/fields/Addendum_1_Location__c.field-meta.xml
<CustomField>
    <fullName>Addendum_1_Location__c</fullName>
    <formula>Addendum_1_Opportunity__r.Training_Location__c</formula>
    <label>Addendum 1 Training Location</label>
    <type>Text</type>
</CustomField>