force-app/main/default/objects/Contract/fields/Addendum_1_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Addendum_1_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addendum 1 Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>