force-app/main/default/objects/Contract/fields/Addendum_1_start_date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_1_start_date__c</fullName>
    <formula>Addendum_1_Opportunity__r.Start_Date__c</formula>
    <label>Addendum 1 Start Date</label>
    <type>Date</type>
</CustomField>