force-app/main/default/objects/Contract/fields/Addendum_2_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Addendum_2_Course_Name__c</fullName>
    <formula>Addendum_2_Opportunity__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addendum 2 Course  Name</label>
    <type>Text</type>
</CustomField>