force-app/main/default/objects/Contract/fields/Addendum_2_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Addendum_2_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addendum 2 Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Addendum 2 Opportunity)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>