force-app/main/default/objects/Contract/fields/Addendum_2_start_date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_2_start_date__c</fullName>
    <formula>Addendum_2_Opportunity__r.Start_Date__c</formula>
    <label>Addendum 2 Start Date</label>
    <type>Date</type>
</CustomField>