force-app/main/default/objects/Contract/fields/Addendum_2_Total__c.field-meta.xml
<CustomField>
    <fullName>Addendum_2_Total__c</fullName>
    <formula>Addendum_2_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addendum 2 Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>