force-app/main/default/objects/Contract/fields/Addendum_2_Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Addendum_2_Training_Location__c</fullName>
    <formula>Addendum_2_Opportunity__r.Training_Location__c</formula>
    <label>Addendum 2 Training Location</label>
    <type>Text</type>
</CustomField>