force-app/main/default/objects/Contract/fields/Addendum_3_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Addendum_3_Course_Name__c</fullName>
    <formula>Addendum_3_Opportunity__r.Course_Name__c</formula>
    <label>Addendum 3 Course Name</label>
    <type>Text</type>
</CustomField>