force-app/main/default/objects/Contract/fields/Addendum_3_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Addendum_3_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addendum 3 Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Addendum #3 Opportunity)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>