force-app/main/default/objects/Contract/fields/Addendum_3_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_3_Start_Date__c</fullName>
    <formula>Addendum_3_Opportunity__r.Start_Date__c</formula>
    <label>Addendum 3 Start Date</label>
    <type>Date</type>
</CustomField>