force-app/main/default/objects/Contract/fields/Addendum_3_Total__c.field-meta.xml
<CustomField>
    <fullName>Addendum_3_Total__c</fullName>
    <formula>Addendum_3_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addendum 3 Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>