force-app/main/default/objects/Contract/fields/Addendum_3_Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Addendum_3_Training_Location__c</fullName>
    <formula>Addendum_3_Opportunity__r.Training_Location__c</formula>
    <label>Addendum 3 Training Location</label>
    <type>Text</type>
</CustomField>