force-app/main/default/objects/Contract/fields/Addendum_4_Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Addendum_4_Training_Location__c</fullName>
    <formula>Addendum_4_Opportunity__r.Training_Location__c</formula>
    <label>Addendum 4 Training Location</label>
    <type>Text</type>
</CustomField>