force-app/main/default/objects/Contract/fields/Billing_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_email__c</fullName>
    <formula>Account.Billing_Contact_email__c</formula>
    <label>Billing Contact email</label>
    <type>Text</type>
</CustomField>