force-app/main/default/objects/Contract/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <formula>Account.Billing_Contact__r.FirstName   &amp; &quot; &quot; &amp;   Account.Billing_Contact__r.LastName</formula>
    <label>Billing Contact Name</label>
    <type>Text</type>
</CustomField>