force-app/main/default/objects/Contract/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <formula>Account.Billing_Contact_phone__c</formula>
    <label>Billing Contact Phone</label>
    <type>Text</type>
</CustomField>