force-app/main/default/objects/Contract/fields/Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Time__c</fullName>
    <inlineHelpText>all breaks including lunch.</inlineHelpText>
    <label>Break Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>