force-app/main/default/objects/Contract/fields/CC_Price_Group__c.field-meta.xml
<CustomField>
    <fullName>CC_Price_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price Group Associated to Contract</description>
    <label>CC Price Group</label>
    <referenceTo>ccrz__E_PriceGroup__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>