force-app/main/default/objects/Contract/fields/CC_Price_Group_Account__c.field-meta.xml
<CustomField>
    <fullName>CC_Price_Group_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price Group associated to the contract</description>
    <label>Price Group Account</label>
    <referenceTo>ccrz__E_PriceGroupAccount__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>