force-app/main/default/objects/Contract/fields/Customer_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_email__c</fullName>
    <formula>Customer_Contact__r.Email</formula>
    <label>Customer Contact email</label>
    <type>Text</type>
</CustomField>