force-app/main/default/objects/Contract/fields/Customer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fax__c</fullName>
    <formula>Account.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Fax</label>
    <type>Text</type>
</CustomField>