force-app/main/default/objects/Contract/fields/Expired_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expired_Contract__c</fullName>
    <formula>IF(
EndDate  &lt;=  TODAY(),
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Contract</label>
    <type>Checkbox</type>
</CustomField>