force-app/main/default/objects/Contract/fields/LMS_ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_ORG_ID__c</fullName>
    <formula>Account.SABA_LMS_Code__c</formula>
    <label>LMS ORG ID</label>
    <type>Text</type>
</CustomField>