force-app/main/default/objects/Contract/fields/Non_Binding_Contract__c.field-meta.xml
<CustomField>
    <fullName>Non_Binding_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract Record to support Transactional  Sales.</description>
    <inlineHelpText>Use to indicate customer received confirmation of Order in lieu of Agreement signature</inlineHelpText>
    <label>Non Binding Contract</label>
    <type>Checkbox</type>
</CustomField>