force-app/main/default/objects/Contract/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Opportunity)</relationshipLabel>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>