force-app/main/default/objects/Contract/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>TEXT (  Account.Preferred_Payment_type__c  )</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>