force-app/main/default/objects/Contract/fields/Red_Cross_issued_PO__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_issued_PO__c</fullName>
    <formula>Account.Red_Cross_PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Cross issued PO#</label>
    <type>Text</type>
</CustomField>