force-app/main/default/objects/Contract/fields/Training_Event_2__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event 2</label>
    <referenceTo>Training_Events__c</referenceTo>
    <relationshipLabel>Contracts (Training Event 2)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>