force-app/main/default/objects/Contract/fields/Training_Event_3__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event 3</label>
    <referenceTo>Training_Events__c</referenceTo>
    <relationshipLabel>Contracts (Training Event 3)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>