force-app/main/default/objects/Contract/fields/Training_Event_4__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event 4</label>
    <referenceTo>Training_Events__c</referenceTo>
    <relationshipLabel>Contracts (Training Event 4)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>