force-app/main/default/objects/Contract/recordTypes/Authorized_Provider.recordType-meta.xml
<RecordType>
    <fullName>Authorized_Provider</fullName>
    <active>true</active>
    <description>use to create Authorized Provider Contract</description>
    <label>Authorized Provider</label>
</RecordType>