force-app/main/default/objects/Contract/recordTypes/Full_Service.recordType-meta.xml
<RecordType>
    <fullName>Full_Service</fullName>
    <active>true</active>
    <description>Use to create all Contracts</description>
    <label>Full Service</label>
</RecordType>