force-app/main/default/objects/Contract/recordTypes/Licensed_Training_Provider.recordType-meta.xml
<RecordType>
    <fullName>Licensed_Training_Provider</fullName>
    <active>true</active>
    <description>use to create Licensed Training Provider Contract</description>
    <label>Licensed Training Provider</label>
</RecordType>