force-app/main/default/objects/Contract/validationRules/Validation_Rule_on_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_on_Description</fullName>
    <active>true</active>
    <description>This VR defines that only specific users are able to make changes on Description field.</description>
    <errorConditionFormula>AND( 
AND( 
ISCHANGED(Description)), 



AND( 
$User.Id != &quot;005d0000000TvQL&quot;, /*Marty Mullins*/ 
$User.Id != &quot;005d0000000TuyJ&quot;, /*Heather Weller*/ 
$User.Id != &quot;005d0000000Tuxg&quot;, /*Peggy Brown*/ 
$User.Id != &quot;005d0000000TvOu&quot; /*Dalia Dinkins*/ 
), 

$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>You do not have permission to make this change.</errorMessage>
</ValidationRule>